[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu_lvl4.gd" type="Script" id=1]
[ext_resource path="res://LuckiestGuy-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Imagens/btn_lvl1.png" type="Texture" id=3]
[ext_resource path="res://Imagens/btn_lvl2.png" type="Texture" id=4]
[ext_resource path="res://Imagens/btn_lvl3.png" type="Texture" id=5]
[ext_resource path="res://Imagens/btn_lvl4.png" type="Texture" id=6]
[ext_resource path="res://Imagens/btn_exit.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 222.0
margin_top = 129.0
margin_right = 801.0
margin_bottom = 470.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 579.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "Calum's Journey"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 189.0
margin_top = 75.0
margin_right = 389.0
margin_bottom = 341.0
size_flags_horizontal = 4

[node name="Nível 1" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )

[node name="Nível 2" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )

[node name="Nível 3" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
texture_normal = ExtResource( 5 )

[node name="Nível 4" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 162.0
margin_right = 200.0
margin_bottom = 212.0
texture_normal = ExtResource( 6 )

[node name="Quit" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 216.0
margin_right = 200.0
margin_bottom = 266.0
texture_normal = ExtResource( 7 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Nível 1" to="." method="_on_Nvel_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Nível 2" to="." method="_on_Nvel_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Nível 3" to="." method="_on_Nvel_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Nível 4" to="." method="_on_Nvel_4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Quit" to="." method="_on_Quit_pressed"]
